--- a/Mobile_visualization.ipynb
+++ b/Mobile_visualization.ipynb
@@ -289,6 +289,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "id": "ba1ddc95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price_range_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   price_range_count\n",
+       "0                500\n",
+       "1                500\n",
+       "2                500\n",
+       "3                500"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Price range feat count (how many rows are for every price range values)\n",
+    "df_price = df['price_range'].value_counts().to_frame()\n",
+    "df_price = df_price.rename(columns = {'price_range':'price_range_count'})\n",
+    "df_price"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "f172f8d3",
    "metadata": {},
@@ -320,17 +391,6 @@
     "            cmap='rocket', \n",
     "            fmt = '.2f')\n",
     "plt.savefig('heatmap.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "ba1ddc95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_price = df['price_range'].value_counts().to_frame()\n",
-    "df_price = df_price.rename(columns = {'price_range':'price_range_count'})"
    ]
   },
   {
